<resources>
    <string name="app_name">FilmFinder</string>
    <string name="app_notification_title">Не забудьте посмотреть!</string>

    <string name="main.menu_home_title">Главная</string>
    <string name="main.menu_favourites_title">Избранное</string>
    <string name="main.menu_watch_later_title">Смотреть позже</string>
    <string name="main.menu_selections_title">Подборки</string>
    <string name="main.menu_settings_title">Настройки</string>
    <string name="main_backpress_message">Нажмите дважды для выхода</string>
    <string name="main_message_offline">Интернет недоступен.</string>
    <string name="main_message_cache">Данные загружаются из кеша</string>
    <string name="main_message_search_cache">Поиск ведется среди кэшированных фильмов</string>
    <string name="main_message_battery_low">Батарея разряжена</string>
    <string name="main_message_power_connected">Зарядка подключена</string>
    <string name="details_share_message">"Посмотри этот фильм: "</string>
    <string name="details_share_title">"Поделиться:"</string>
    <string name="details_permission_storage">Нет разрешения. Пожалуйста, предоставьте разрешение</string>
    <string name="details_downloaded_to_gallery">"Сохранено в галерею"</string>
    <string name="details_open">В галерею</string>
    <string name="category_now_playing">Сейчас в кино</string>
    <string name="category_popular">Популярные фильмы</string>
    <string name="category_top_rated">Лучшие фильмы</string>
    <string name="category_upcoming">Скоро в кино</string>
    <string name="category_top_250">Топ 250</string>
    <string name="category_boxoffice_weekend">Кассовые сборы за выходные</string>
    <string name="category_boxoffice_alltime">Кассовые сборы за всё время</string>
    <string name="retry_button">Нажмите для перезагрузки</string>
    <string name="welcome_text">Для поиска фильма, начните вводить его название в строку поиска</string>
    <string name="error_category">Ошибка при получении списка доступных категорий</string>
    <string name="error_failed_download">Не удалось загрузить данные из сети:</string>
    <string name="error_load_from_cache">Данные загружены из кеша</string>
    <string name="error_search_from_cache">Поиск выполнен среди кэшированных фильмов</string>
    <string name="settings_api_title">Использовать данные с сайта:</string>
    <string name="settings_api_tmdb">themoviedb.org</string>
    <string name="settings_api_imdb">imdb-api.com</string>
    <string name="settings_cache_title">Загружать данные из кеша:</string>
    <string name="settings_cache_auto">авто (когда не удалась загрузка из сети)</string>
    <string name="settings_cache_always">всегда</string>
    <string name="settings_cache_never">никогда</string>
    <string name="settings_cache_clear">Очистить кеш</string>
    <string name="details_allow_later_write_external_storage">"Доступ к фотографиям, мультимедиа и файлам на вашем устройстве для приложения запрещен. Для возможности сохранения постера на устройство включите доступ в настройках для приложения "</string>
    <string name="details_allow_later_post_notifications">На вашем устройстве для приложения запрещены уведомления. Для получения уведомлений включите доступ в настройках для приложения</string>
    <string name="item_reminder_not_null">Напомнить:\n %s</string>
    <string name="item_reminder_null">Время напоминания уже прошло</string>
    <string name="reminder_default_time">0000.00.00 00:00</string>
    <string name="message_pro">Доступно в Pro версии</string>
    <string name="promo_title">Рекомендуем посмотреть</string>
</resources>