<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFragmentRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settingsToolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_settings"
        app:navigationIconTint="?attr/itemIconTint"
        app:title="@string/main.menu_settings_title"
        app:titleTextColor="?attr/itemTextColor" />

    <TextView
        android:id="@+id/settingsApiTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_of_elements"
        android:layout_marginTop="@dimen/margin_of_elements"
        android:layout_marginEnd="@dimen/margin_of_elements"
        android:text="@string/settings_api_title"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsToolbar" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/settingsApiChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_of_elements"
        android:layout_marginEnd="@dimen/margin_of_elements"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsApiTitle"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/settingsApiChipTmdb"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_api_tmdb" />

        <com.google.android.material.chip.Chip
            android:id="@+id/settingsApiChipImdb"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_api_imdb" />

    </com.google.android.material.chip.ChipGroup>

    <View
        android:id="@+id/settingsApiDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/margin_of_elements"
        android:background="#ff888888"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsApiChipGroup" />

    <TextView
        android:id="@+id/settingsCacheTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_of_elements"
        android:layout_marginTop="@dimen/margin_of_elements"
        android:layout_marginEnd="@dimen/margin_of_elements"
        android:text="@string/settings_cache_title"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsApiDivider" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/settingsCacheChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_of_elements"
        android:layout_marginEnd="@dimen/margin_of_elements"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsCacheTitle"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/settingsCacheChipAuto"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_cache_auto" />

        <com.google.android.material.chip.Chip
            android:id="@+id/settingsCacheChipAlways"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_cache_always" />

        <com.google.android.material.chip.Chip
            android:id="@+id/settingsCacheChipNever"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_cache_never" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/settingsCacheClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_cache_clear"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsCacheChipGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>